tests/expectations/compiler/integers/i32/negate_min_fail.out
Error [ESAZ0374006]: Unary operation `-2147483648i32.neg()` failed at compile time: negation overflow.
    --> compiler-test:8:16
     |
   8 |         return -a; // This line attempts to return 2147483648i32 however, the largest i32 value is 2147483647i32.
     |                ^^
